<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/linearLayout">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="start"
                android:layout_weight="1"
                android:id="@+id/player_one_label"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versus"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"
                android:layout_weight="1"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="end"
                android:layout_weight="1"
                android:id="@+id/player_two_label"
                />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/game_status"
            android:layout_below="@+id/linearLayout"
            >
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:gravity="center"
                android:id="@+id/game_result"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/game_status"
            android:layout_alignParentStart="true"
            android:id="@+id/game_grid_container"
            >
        <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:rowCount="3"
                android:columnCount="3"
                android:id="@+id/game_grid"
                >
            <Button />
            <Button />
            <Button />
            <Button />
            <Button />
            <Button />
            <Button />
            <Button />
            <Button />
        </GridLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/game_grid_container"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            >
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_new_game"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:id="@+id/start_new_game_button"
                />
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/highscore"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:id="@+id/history_button"
                />
    </LinearLayout>
</RelativeLayout>